--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@
     width: 200px;
     border: 1px solid transparent;
     padding: 5px;
-    margin: 5px;
+    margin: 10px;
 }
 .res-card:hover {
     border: 1px solid black;
@@ -36,4 +36,20 @@
   }
 .res-logo{
     width: 200px;
+}
+
+.filter{
+    margin: 10px;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-block{
+    margin: 10px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
+    justify-content: space-around;
 }
