--- a/index.css
+++ b/index.css
@@ -39,9 +39,13 @@
 }
 
 .filter{
-    margin: 10px;
+    display: flex;
+    margin: 5px;
+    
 }
-
+.filter-btn{
+    margin: 5px;
+}
 .shimmer-container{
     display: flex;
     flex-wrap: wrap;
@@ -52,4 +56,7 @@
     height: 400px;
     background-color: #f0f0f0;
     justify-content: space-around;
+}
+.lg-button{
+    margin: 10px;
 }
