--- a/index.css
+++ b/index.css
@@ -1,66 +1,3 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    border: 1px solid black;
-}
-.logo{
-    width: 130px;
-}
-
-.nav-items > ul {
-    display: flex;
-    list-style-type: none;
-    font-size: 24px;
-    
-}
-
-.nav-items >ul >li{
-    padding: 10px;
-    margin: 10px;
-}
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-.res-data{
-    text-decoration: none;
-    color: black;
-}
-.res-card{
-    width: 200px;
-    border: 1px solid transparent;
-    padding: 5px;
-    margin: 10px;
-}
-.res-card:hover {
-    border: 1px solid black;
-    cursor: pointer;
-  }
-.res-logo{
-    width: 200px;
-}
-
-.filter{
-    display: flex;
-    margin: 5px;
-    
-}
-.filter-btn{
-    margin: 5px;
-}
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-.shimmer-block{
-    margin: 10px;
-    width: 200px;
-    height: 400px;
-    background-color: #f0f0f0;
-    justify-content: space-around;
-}
-.lg-button{
-    margin: 10px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
